About Content Updated

--- a/index.html
+++ b/index.html
@@ -472,11 +472,12 @@ In the present assignment in CEA, he is looking after the National Power Portal,
 <div class="container">
     <div class="row">
         <div class="col-md-12 content">
-			<h2>IEEE Data & Storage Summit 2021</h2>
-      <p>Technology trends are very dynamic! As we talk, it is changing and getting new dimensions, be it AI, Cloud, 5G, Edge, Bigdata, or any other technology domain. But, all these are data-driven. Data management, analysis, and Storage are becoming the center of all the technologies. Hence the research and development of new architecture, cutting-edge innovative solutions and standards in the Data and Storage domain are ever accelerated today!</p>
-      <p>IEEE Bangalore Section is organizing Data & Storage Summit on 30 June 2021, an Industry flagship event connecting technology leaders across various segments of the data management and storage world.</p>
-      <p>This one-day summit will bring together technology leaders, innovators, entrepreneurs & thought provokers who are passionate about addressing impactful problems by turning ideas into solutions. Industry stalwarts and technology practitioners, together will share their vision on future technologies and how they will impact our way of working and living.
-      Due to the pandemic situation, this event is organized virtually and we are very excited that it can bring participants from all over the world. Targeted audiences are from Corporate, Academia and Industry.</p>  
+			<h2>IEEE Data & Storage Summit 2021</h2> <br>
+      <p>With the fast changing scenarios, and the needs to solve imminent challenges even faster in the Health and Life Sciences, Energy, Weather Prediction, Seismic Processing and allied areas; what is remaining unchanged is the desire for fast data driven apps and computing. Scalable AI lends a helping hand but also needs higher performing infrastructure to support it. Data Storage technologies is increasingly playing a central role in its enablement. Hence the research and development of new architecture, cutting-edge innovative solutions and standards in the Data and Storage domain are ever accelerated today!</p> <br>
+
+	  <p>IEEE Bangalore Section is organizing Data & Storage Summit on 30 June 2021, an Industry flagship event connecting technology leaders across various segments of the data management and storage world.</p> <br>
+
+	  <p>This one-day summit will bring together technology leaders, innovators, entrepreneurs & thought provokers who are passionate about addressing impactful problems by turning ideas into solutions. Industry stalwarts and technology practitioners, together will share their vision on future technologies and how they will impact our way of working and living. Due to the pandemic situation, this event is organized virtually and we are very excited that it can bring participants from all over the world. Targeted audiences are from Corporate, Academia and Industry.</p>  
     </div>
     </div>
     <br>
