--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ In the present assignment in CEA, he is looking after the National Power Portal,
              <li><a href="#speakers">Speakers</a></li>
               <li><a href="#organizing" data-target="#organizing">Organizing Committee</a></li>
              <!--<li><a href="#agendaSection">Schedule</a></li>-->
-              <li><a href="https://ieeebangalore.org/product-category/ieee-cps/" target="_blank">Registration</a></li>
+              <li><a href="#" target="_blank">Registration</a></li>
             </ul>
         </div>
     </nav>
@@ -651,12 +651,12 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Welcome and Setting the context</td>  
                 <td>8:15 - 8:30 </td>                
-                <td>IEEE Chair</td>
+                <td><b>Bindhumadhava B S</b> <br> Chair, IEEE Bangalore Section</td>
               </tr>
               <tr>
 				<td>Keynote  Address</td>
                 <td>8:30 - 9:00</td>                
-                <td>Tom - Tentative</td>
+                <td><b>Tom</b> - Tentative</td>
               </tr>
               <tr>
 				<td>Session 1 -</td>
@@ -666,12 +666,12 @@ In the present assignment in CEA, he is looking after the National Power Portal,
                <tr>
 				<td>Session 2 -</td>
 				<td>9:30 - 10:00</td>
-                <td>Badrinath Ramamurthy</td>
+                <td><b>Badrinath Ramamurthy</b><br> Principal Engineer, Ericssion Research</td>
               </tr>
               <tr>
 				<td>Session 3 -</td>
 				<td>10:00 - 10:30</td>  
-				<td>Manu Awasthi</td>
+				<td><b>Manu Awasthi</b> <br> Associate Professor of Computer Science, Ashoka University, Ph.D. University of Utah</td>
               </tr>
               <tr>
 				<td>LT - 1 (Pre-Recorded)</td>   
@@ -696,12 +696,12 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Session 5 -</td>   
 				<td>12:20 - 12:50</td>  
-                <td><b>Star Speaker - Jean Francois Marie</b></td>
+                <td><b>Star Speaker - Jean Francois Marie</b> <br> SNIA EMEA, Board of Director</td>
               </tr>
               <tr>
 				<td>Closing Notes</td>   
 				<td>12:50 - 13:00</td>  
-                <td>IEEE Chair</td>
+                <td><b>Bindhumadhava B S</b> <br>Chair, IEEE Bangalore Section</td>
               </tr>
               
               </tr>
