--- a/index.html
+++ b/index.html
@@ -656,12 +656,12 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Keynote  Address</td>
                 <td>8:30 - 9:00</td>                
-                <td><b>Tom</b> - Tentative</td>
+                <td>TBD</td>
               </tr>
               <tr>
 				<td>Session 1 -</td>
                 <td>9:00 - 9:30 </td>               
-                <td><b>Star Speaker</b></td>
+                <td>TBD</td>
               </tr>
                <tr>
 				<td>Session 2 -</td>
@@ -676,27 +676,27 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>LT - 1 (Pre-Recorded)</td>   
 				<td>10:30 - 10:40</td>  
-                <td>Huawei</td>
+                <td><b>Archit Somany</b></td>
               </tr>
               <tr>
 				<td>LT - 2 (Pre-Recorded)</td>   
 				<td>10:40 - 10:50</td>  
-                <td></td>
+                <td><b>Shubhankar</b><br> IIT Delhi</td>
               </tr>
               <tr>
 				<td>Panel Discussion</td>   
 				<td>10:50 - 11:50</td>  
-                <td></td>
+                <td>TBD</td>
               </tr>
               <tr>
 				<td>Session 4 -</td>   
 				<td>11:50 - 12:20</td>  
-                <td></td>
+                <td><b>Jaya Sreevalsan Nair</b> <br> Associate Professor, IIIT Bangalore</td>
               </tr>
               <tr>
 				<td>Session 5 -</td>   
 				<td>12:20 - 12:50</td>  
-                <td><b>Star Speaker - Jean Francois Marie</b> <br> SNIA EMEA, Board of Director</td>
+                <td><b>Jean Francois Marie</b> <br> SNIA EMEA, Board of Director</td>
               </tr>
               <tr>
 				<td>Closing Notes</td>   
