Updated Closing notes

--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Closing Notes</td>   
 				<td>12:50 - 13:00</td>  
-                <td><b>Bindhumadhava B S</b> <br>Chair, IEEE Bangalore Section</td>
+                <td><b></b> <br>IEEE Bangalore Section</td>
               </tr>
               
               </tr>
