--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ In the present assignment in CEA, he is looking after the National Power Portal,
              <li><a href="#speakers">Speakers</a></li>
               <li><a href="#organizing" data-target="#organizing">Organizing Committee</a></li>
              <!--<li><a href="#agendaSection">Schedule</a></li>-->
-              <li><a href="#" target="_blank">Registration</a></li>
+              <li><a href="https://in.explara.com/e/ieee-data--storage-summit-2021" target="_blank">Registration</a></li>
             </ul>
         </div>
     </nav>
@@ -629,7 +629,7 @@ In the present assignment in CEA, he is looking after the National Power Portal,
     </div>
     <br>
 <div class="row" id="register">
-<center><a href=""><button class="button button1">Registerations opening soon!</button></a></center>
+<center><a href="https://in.explara.com/e/ieee-data--storage-summit-2021"><button class="button button1">Register now!</button></a></center>
 </div>
 
 
