--- a/index.html
+++ b/index.html
@@ -659,17 +659,17 @@ In the present assignment in CEA, he is looking after the National Power Portal,
                 <td>TBD</td>
               </tr>
               <tr>
-				<td>Session 1 -</td>
+				<td>Session 1</td>
                 <td>9:00 - 9:30 </td>               
                 <td>TBD</td>
               </tr>
                <tr>
-				<td>Session 2 -</td>
+				<td>Session 2</td>
 				<td>9:30 - 10:00</td>
                 <td><b>Badrinath Ramamurthy</b><br> Principal Engineer, Ericssion Research</td>
               </tr>
               <tr>
-				<td>Session 3 -</td>
+				<td>Session 3</td>
 				<td>10:00 - 10:30</td>  
 				<td><b>Manu Awasthi</b> <br> Associate Professor of Computer Science, Ashoka University, Ph.D. University of Utah</td>
               </tr>
@@ -689,12 +689,12 @@ In the present assignment in CEA, he is looking after the National Power Portal,
                 <td>TBD</td>
               </tr>
               <tr>
-				<td>Session 4 -</td>   
+				<td>Session 4</td>   
 				<td>11:50 - 12:20</td>  
                 <td><b>Jaya Sreevalsan Nair</b> <br> Associate Professor, IIIT Bangalore</td>
               </tr>
               <tr>
-				<td>Session 5 -</td>   
+				<td>Session 5</td>   
 				<td>12:20 - 12:50</td>  
                 <td><b>Jean Francois Marie</b> <br> SNIA EMEA, Board of Director</td>
               </tr>
