--- a/index.html
+++ b/index.html
@@ -717,59 +717,84 @@ In the present assignment in CEA, he is looking after the National Power Portal,
                 <th>Speakers</th>
               </tr>
               <tr>
-				<td>Welcome and Setting the context</td>  
-                <td>8:15 - 8:30 </td>                
+				<td>Welcome and Setting the Context</td>  
+                <td>8:10 - 8:15 </td>                
                 <td><b>Bindhumadhava B S</b> <br> Chair, IEEE Bangalore Section</td>
               </tr>
               <tr>
-				<td>Keynote  Address</td>
-                <td>8:30 - 9:00</td>                
+				<td>Day's Keynote  Address</td>
+                <td>8:15 - 8:45</td>                
                 <td>TBD</td>
               </tr>
               <tr>
 				<td>Session 1</td>
-                <td>9:00 - 9:30 </td>               
-                <td><b>Siddhartha Nandi</b><br>Founder, AIRNSOFT </td>
+                <td>8:45 - 9:15 </td>               
+                <td><b>Tameesh Suri</b><br>Samsung, US </td>
               </tr>
-               <tr>
+              <tr>
 				<td>Session 2</td>
-				<td>9:30 - 10:00</td>
-                <td><b>Badrinath Ramamurthy</b><br> Principal Engineer, Ericssion Research</td>
+                <td>9:15 - 9:45 </td>               
+                <td><b>Siddhartha Nandi</b><br>Founder, AIRNSOFT </td>
               </tr>
               <tr>
 				<td>Session 3</td>
-				<td>10:00 - 10:30</td>  
+				<td>9:45 - 10:15</td>  
 				<td><b>Manu Awasthi</b> <br> Associate Professor of Computer Science, Ashoka University, Ph.D. University of Utah</td>
               </tr>
               <tr>
+				<td>Session 4</td>
+				<td>10:15 - 10:45</td>
+                <td><b>Badrinath Ramamurthy</b><br> Principal Engineer, Ericssion Research</td>
+              </tr>
+              <tr>
+				<td>Session 5</td>
+				<td>10:45 - 11:15</td>
+                <td><b>Mohammad</b><br></td>
+              </tr>
+              <tr>
+				<td>Panel Discussion</td>   
+				<td>11:15 - 12:00</td>  
+                <td>Discussion, Summary, Take Away</td>
+              </tr>
+              <tr>
 				<td>LT - 1 (Pre-Recorded)</td>   
-				<td>10:30 - 10:40</td>  
+				<td>12:00 - 12:10</td>  
                 <td><b>Archit Somany</b><br>Research Scientist, Storage Space Team, Huawei Technologies India Pvt. Ltd.</td>
               </tr>
               <tr>
 				<td>LT - 2 (Pre-Recorded)</td>   
-				<td>10:40 - 10:50</td>  
+				<td>12:10 - 12:20</td>  
                 <td><b>Shubhankar</b><br> IIT Delhi</td>
               </tr>
               <tr>
-				<td>Panel Discussion</td>   
-				<td>10:50 - 11:50</td>  
-                <td>TBD</td>
+				<td>Q & A</td>   
+				<td>12:20 - 12:30</td>  
+                <td>For LT Sessions</td>
               </tr>
               <tr>
-				<td>Session 4</td>   
-				<td>11:50 - 12:20</td>  
+				<td>Break</td>   
+				<td>12:30 - 13:00</td>  
+                <td>Lunch Break</td>
+              </tr>
+              <tr>
+				<td>Session 6</td>   
+				<td>13:00 - 13:30</td>  
                 <td><b>Jaya Sreevalsan Nair</b> <br> Associate Professor, IIIT Bangalore</td>
               </tr>
               <tr>
-				<td>Session 5</td>   
-				<td>12:20 - 12:50</td>  
+				<td>Session 7</td>   
+				<td>13:30 - 14:15</td>  
+                <td><b>Professor Onur Mutlu</b> <br>Chief Guest</td>
+              </tr>
+              <tr>
+				<td>Session 8</td>   
+				<td>14:15 - 14:45</td>  
                 <td><b>Jean Francois Marie</b> <br> SNIA EMEA, Board of Director</td>
               </tr>
               <tr>
 				<td>Closing Notes</td>   
-				<td>12:50 - 13:00</td>  
-                <td><b></b>IEEE Bangalore Section</td>
+				<td>14:45 - 15:00</td>  
+                <td><b>Bindhumadhava B S</b><br>Chair, IEEE Bangalore Section</td>
               </tr>
               
               </tr>
