--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Session 5</td>
 				<td>10:45 - 11:15</td>
-                <td><b>Mohammad</b><br></td>
+                <td><b>TBD</b><br></td>
               </tr>
               <tr>
 				<td>Panel Discussion</td>   
