Home Page content updated

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>IEEE Data & Storage Summit 2021(DSS-2021)</title>
+  <title>IEEE Data & Storage Symposium 2021(DSS-2021)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/style.css"/>
@@ -687,12 +687,12 @@ In the present assignment in CEA, he is looking after the National Power Portal,
 <div class="container">
     <div class="row">
         <div class="col-md-12 content">
-			<h2>IEEE Data & Storage Summit 2021</h2> <br>
+			<h2>IEEE Data & Storage Symposium 2021</h2> <br>
       <p>With the fast changing scenarios, and the needs to solve imminent challenges even faster in the Health and Life Sciences, Energy, Weather Prediction, Seismic Processing and allied areas; what is remaining unchanged is the desire for fast data driven apps and computing. Scalable AI lends a helping hand but also needs higher performing infrastructure to support it. Data Storage technologies is increasingly playing a central role in its enablement. Hence the research and development of new architecture, cutting-edge innovative solutions and standards in the Data and Storage domain are ever accelerated today!</p> <br>
 
-	  <p>IEEE Bangalore Section is organizing Data & Storage Summit on 30 June 2021, an Industry flagship event connecting technology leaders across various segments of the data management and storage world.</p> <br>
+	  <p>IEEE Bangalore Section is organizing Data & Storage Symposium on 30 June 2021, an Industry flagship event connecting technology leaders across various segments of the data management and storage world.</p> <br>
 
-	  <p>This one-day summit will bring together technology leaders, innovators, entrepreneurs & thought provokers who are passionate about addressing impactful problems by turning ideas into solutions. Industry stalwarts and technology practitioners, together will share their vision on future technologies and how they will impact our way of working and living. Due to the pandemic situation, this event is organized virtually and we are very excited that it can bring participants from all over the world. Targeted audiences are from Corporate, Academia and Industry.</p>  
+	  <p>This one-day Symposium will bring together technology leaders, innovators, entrepreneurs & thought provokers who are passionate about addressing impactful problems by turning ideas into solutions. Industry stalwarts and technology practitioners, together will share their vision on future technologies and how they will impact our way of working and living. Due to the pandemic situation, this event is organized virtually and we are very excited that it can bring participants from all over the world. Targeted audiences are from Corporate, Academia and Industry.</p>  
     </div>
     </div>
     <br>
@@ -703,7 +703,7 @@ In the present assignment in CEA, he is looking after the National Power Portal,
 
      <div id="agendaSection"  class="row">
       <div class="col-md-12">
-        <h2 class="summitAgenda">Summit Schedule</h2>
+        <h2 class="summitAgenda">Symposium Schedule</h2>
         <h3>IEEE One Day Online Symposium on</h3>
         <h1>Data & Storage</h1>
          <table class="table table-bordered agenda">
