--- a/index.html
+++ b/index.html
@@ -483,16 +483,11 @@ In the present assignment in CEA, he is looking after the National Power Portal,
           </div>
           <div class="col-md-8">
             <div class="modalContent">
-              <p>A healthy combination of rich academic research experience as well as R&D in the industry.
-                <br><br>
-                Specializations: Cloud Computing, HPC Systems, Semantic Web, Checkpoint Restart, Parallel and Distributed Systems, Graph Theory, Interconnection Networks.
-                <br><br>
-                . Detailed Profile and Publications: <a href="http://bit.ly/2UnxJY5">http://bit.ly/2UnxJY5</a>
-                <br>
-                . My (old) delicious bookmarks: <a href="http://delicious.com/rbadrinath">http://delicious.com/rbadrinath</a>
-                <br><br>
-                At Ericsson Research my current work is in the area of Managing Cyber Physical Systems with emphasis on capturing semantics aspects, reasoning, procedural knowledge etc.
-              </p>
+              <p>Badrinath is a Principal Engineer with Ericsson Research, Bangalore.
+				He is part of a team that deals with the machine reasoning technologies in AI. 
+				This includes technologies such as AI planning and Semantic web He is currently working on different projects related to zero touch automation.
+				He has earlier worked in the areas of Cloud systems, High Performance Computing and Graph Theory.
+				He has 18 years of industry experience preceded by close to a decade's experience as a faculty at IIT Kharagpur.</p>
             </div>
           </div>
         </div>
@@ -597,6 +592,72 @@ In the present assignment in CEA, he is looking after the National Power Portal,
 		              He has published many research papers in top international conferences such as PODC, SSS, NETYS and I&C journals. He is a PC member of 18th ICDCIT 2022. He has reviewed the papers of various conferences and journals like DISC’20/18, IndoSys’19, SRDS’18, HLPP’18, CODS-COMAD’18/19, ICDCN’18/17/16, OPODIS’17, ICDCIT’16, ICIT’15, IEEE access and Journal of Grid Computing. 
 		              Archit has earned Masters from MANIT Bhopal, India and Bachelors from ITM, Bhilwara, India and received honors.
 		              </p>
+		            </div>
+		          </div>
+		        </div>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+		
+		
+		
+<!--  Onur Mutlu -->
+	<div class="modal fade" id="onur" role="dialog">
+	  <div class="modal-dialog">
+		<!-- Modal content-->
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal">&times;</button>
+		        <h4 class="modal-title">Onur Mutlu, <span class="titlePosition">Professor of Computer Science, ETH Zurich</span></h4>
+		      </div>
+		      <div class="modal-body">
+		        <div class="row">
+		          <div class="col-md-4">
+		            <div class="modalDialogImages">
+		              <img src="./img/onur.jpg" alt="Jaya" width="270px" />
+		            </div>
+		          </div>
+		          <div class="col-md-8">
+		            <div class="modalContent">
+		              <p>Title: Intelligent Architectures for Intelligent Machines
+						<br><br>
+						Bio:
+						<br>
+						Onur Mutlu is a Professor of Computer Science at ETH Zurich. He is
+						also a faculty member at Carnegie Mellon University, where he
+						previously held the Strecker Early Career Professorship.  His current
+						broader research interests are in computer architecture, systems,
+						hardware security, and bioinformatics. A variety of techniques he,
+						along with his group and collaborators, has invented over the years
+						have influenced industry and have been employed in commercial
+						microprocessors and memory/storage systems. He obtained his PhD and MS
+						in ECE from the University of Texas at Austin and BS degrees in
+						Computer Engineering and Psychology from the University of Michigan,
+						Ann Arbor. He started the Computer Architecture Group at Microsoft
+						Research (2006-2009), and held various product and research positions
+						at Intel Corporation, Advanced Micro Devices, VMware, and Google.  He
+						received the IEEE High Performance Computer Architecture Test of Time
+						Award, the IEEE Computer Society Edward J. McCluskey Technical
+						Achievement Award, ACM SIGARCH Maurice Wilkes Award, the inaugural
+						IEEE Computer Society Young Computer Architect Award, the inaugural
+						Intel Early Career Faculty Award, US National Science Foundation
+						CAREER Award, Carnegie Mellon University Ladd Research Award, faculty
+						partnership awards from various companies, and a healthy number of
+						best paper or "Top Pick" paper recognitions at various computer
+						systems, architecture, and security venues. He is an ACM Fellow "for
+						contributions to computer architecture research, especially in memory
+						systems", IEEE Fellow for "contributions to computer architecture
+						research and practice", and an elected member of the Academy of Europe
+						(Academia Europaea). His computer architecture and digital logic
+						design course lectures and materials are freely available on YouTube
+						(<a href="https://www.youtube.com/OnurMutluLectures">https://www.youtube.com/OnurMutluLectures</a>), and his research group
+						makes a wide variety of software and hardware artifacts freely
+						available online (<a href="https://safari.ethz.ch">https://safari.ethz.ch</a>). For more information,
+						please see his webpage at <a href = "https://people.inf.ethz.ch/omutlu">https://people.inf.ethz.ch/omutlu</a>.</p>
 		            </div>
 		          </div>
 		        </div>
@@ -718,82 +779,82 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               </tr>
               <tr>
 				<td>Welcome and Setting the Context</td>  
-                <td>8:10 - 8:15 </td>                
+                <td>8:20 - 8:30 </td>                
                 <td><b>Bindhumadhava B S</b> <br> Chair, IEEE Bangalore Section</td>
               </tr>
               <tr>
 				<td>Day's Keynote  Address</td>
-                <td>8:15 - 8:45</td>                
-                <td>TBD</td>
+                <td>8:30 - 9:00</td>                
+                <td><b>Tom</b><br>IEEE President Elect & Storage Veteran</td>
               </tr>
               <tr>
 				<td>Session 1</td>
-                <td>8:45 - 9:15 </td>               
-                <td><b>Tameesh Suri</b><br>Samsung, US </td>
+                <td>9:00 - 9:30 </td>               
+                <td><b>Tameesh Suri</b><br>Samsung, Chief Architect, US </td>
               </tr>
               <tr>
 				<td>Session 2</td>
-                <td>9:15 - 9:45 </td>               
-                <td><b>Siddhartha Nandi</b><br>Founder, AIRNSOFT </td>
+                <td>9:30 - 10:00 </td>               
+                <td><b>Siddhartha Nandi</b><br>SNIA Board Member, HiPC</td>
               </tr>
               <tr>
 				<td>Session 3</td>
-				<td>9:45 - 10:15</td>  
+				<td>10:00 - 10:30</td>  
 				<td><b>Manu Awasthi</b> <br> Associate Professor of Computer Science, Ashoka University, Ph.D. University of Utah</td>
               </tr>
               <tr>
-				<td>Session 4</td>
-				<td>10:15 - 10:45</td>
+				<td>Session 4 - Some Data Challenges in Building AI Soultions.</td>
+				<td>10:30 - 11:00</td>
                 <td><b>Badrinath Ramamurthy</b><br> Principal Engineer, Ericssion Research</td>
               </tr>
               <tr>
-				<td>Session 5</td>
-				<td>10:45 - 11:15</td>
-                <td><b>TBD</b><br></td>
+				<td>Session 5 - OpenFAM: A Programming Model for Disaggregated Memory</td>
+				<td>11:00 - 11:30</td>
+                <td><b>Mashood Abdullah</b><br>Fabric Attached Memory Expert, HPE</td>
               </tr>
               <tr>
-				<td>Panel Discussion</td>   
-				<td>11:15 - 12:00</td>  
-                <td>Discussion, Summary, Take Away</td>
+				<td>Panel Discussion (Talk it out "HPC, HPDA: Computational Storage, NDP, Hurdles and Enablers!")</td>   
+				<td>11:30 - 12:15</td>  
+                <td>4+1, (Names to be announced soon)</td>
               </tr>
               <tr>
-				<td>LT - 1 (Pre-Recorded)</td>   
-				<td>12:00 - 12:10</td>  
+				<td>Lightening Talk - 1</td>   
+				<td>12:15 - 12:25</td>  
                 <td><b>Archit Somany</b><br>Research Scientist, Storage Space Team, Huawei Technologies India Pvt. Ltd.</td>
               </tr>
               <tr>
-				<td>LT - 2 (Pre-Recorded)</td>   
-				<td>12:10 - 12:20</td>  
-                <td><b>Shubhankar</b><br> IIT Delhi</td>
+				<td>Lightening Talk - 2</td>   
+				<td>12:25 - 12:35</td>  
+                <td><b>Shubhankar</b><br>Ph.D, IIT Delhi (Joining Huawei soon)</td>
               </tr>
               <tr>
 				<td>Q & A</td>   
-				<td>12:20 - 12:30</td>  
+				<td>12:35 - 12:45</td>  
                 <td>For LT Sessions</td>
               </tr>
               <tr>
 				<td>Break</td>   
-				<td>12:30 - 13:00</td>  
+				<td>12:45 - 13:15</td>  
                 <td>Lunch Break</td>
               </tr>
               <tr>
-				<td>Session 6</td>   
-				<td>13:00 - 13:30</td>  
+				<td>Session 6 - Apache Spark: Cassandra Integration for Large Scale LiDAR Point Cloud Analysis</td>   
+				<td>13:15 - 13:45</td>  
                 <td><b>Jaya Sreevalsan Nair</b> <br> Associate Professor, IIIT Bangalore</td>
               </tr>
               <tr>
-				<td>Session 7</td>   
-				<td>13:30 - 14:15</td>  
+				<td>Session 7 - Unleashing benefits of NVMe-Of while keeping software define paradigm</td>   
+				<td>13:45 - 14:30</td>  
                 <td><b>Professor Onur Mutlu</b> <br>Chief Guest</td>
               </tr>
               <tr>
-				<td>Session 8</td>   
-				<td>14:15 - 14:45</td>  
+				<td>Session 8 - Intelligent Architectures for Intelligent Machines</td>   
+				<td>14:30 - 15:00</td>  
                 <td><b>Jean Francois Marie</b> <br> SNIA EMEA, Board of Director</td>
               </tr>
               <tr>
 				<td>Closing Notes</td>   
-				<td>14:45 - 15:00</td>  
+				<td>15:00 - 15:15</td>  
                 <td><b>Bindhumadhava B S</b><br>Chair, IEEE Bangalore Section</td>
               </tr>
               
@@ -890,6 +951,20 @@ In the present assignment in CEA, he is looking after the National Power Portal,
             <div class="caption">
                     <h3>Archit Somany</h3>
                     <p>Research Scientist, Storage Space Team, Huawei Technologies India Pvt. Ltd.</p>
+                    <p></p>
+                    <p class="flipkart"></p>
+                  </div>
+                </a>
+              </div>
+          </div>
+          
+          <div class="col-md-3">
+          <div class="thumbnail">
+            <a href="#" data-toggle="modal" data-target="#onur">
+            <img src="./img/onur.jpg" alt="Badri">
+            <div class="caption">
+                    <h3>Onur Mutlu</h3>
+                    <p>Professor of Computer Science, ETH Zurich</p>
                     <p></p>
                     <p class="flipkart"></p>
                   </div>
