--- a/index.html
+++ b/index.html
@@ -785,17 +785,17 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Day's Keynote  Address</td>
                 <td>8:30 - 9:00</td>                
-                <td><b>Tom</b><br>IEEE President Elect & Storage Veteran</td>
+                <td><b>Tom Coughlin</b><br>IEEE President Elect & Storage Veteran</td>
               </tr>
               <tr>
 				<td>Session 1</td>
                 <td>9:00 - 9:30 </td>               
-                <td><b>Tameesh Suri</b><br>Samsung, Chief Architect, US </td>
+                <td><b>Tameesh Suri</b><br>Director, AI Systems Architect, Applied Material</td>
               </tr>
               <tr>
 				<td>Session 2</td>
                 <td>9:30 - 10:00 </td>               
-                <td><b>Siddhartha Nandi</b><br>SNIA Board Member, HiPC</td>
+                <td><b>Siddhartha Nandi</b><br>Founder, AirNSoft, SNIA Board Member, HiPC</td>
               </tr>
               <tr>
 				<td>Session 3</td>
@@ -810,17 +810,17 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Session 5 - OpenFAM: A Programming Model for Disaggregated Memory</td>
 				<td>11:00 - 11:30</td>
-                <td><b>Mashood Abdullah</b><br>Fabric Attached Memory Expert, HPE</td>
+                <td><b>Mashood Abdullah</b><br>Fabric Attached Memory (FAM) Expert, HPE</td>
               </tr>
               <tr>
 				<td>Panel Discussion (Talk it out "HPC, HPDA: Computational Storage, NDP, Hurdles and Enablers!")</td>   
 				<td>11:30 - 12:15</td>  
-                <td>4+1, (Names to be announced soon)</td>
+                <td>(Names to be announced soon)</td>
               </tr>
               <tr>
 				<td>Lightening Talk - 1</td>   
 				<td>12:15 - 12:25</td>  
-                <td><b>Archit Somany</b><br>Research Scientist, Storage Space Team, Huawei Technologies India Pvt. Ltd.</td>
+                <td><b>Archit Somani</b><br>Post Doctoral Fellow, Israel Institute of Technology</td>
               </tr>
               <tr>
 				<td>Lightening Talk - 2</td>   
@@ -845,7 +845,7 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Session 7 - Unleashing benefits of NVMe-Of while keeping software define paradigm</td>   
 				<td>13:45 - 14:30</td>  
-                <td><b>Professor Onur Mutlu</b> <br>Chief Guest</td>
+                <td><b>Professor Onur Mutlu (Chief Guest)</b> <br> Professor of Computer Science, ETH Zurich</td>
               </tr>
               <tr>
 				<td>Session 8 - Intelligent Architectures for Intelligent Machines</td>   
