--- a/index.html
+++ b/index.html
@@ -780,22 +780,22 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Welcome and Setting the Context</td>  
                 <td>8:20 - 8:30 </td>                
-                <td><b>Bindhumadhava B S</b> <br> Chair, IEEE Bangalore Section</td>
+                <td><b>Bindhumadhava B S</b> <br> Chair IEEE Bangalore Section</td>
               </tr>
               <tr>
 				<td>Day's Keynote  Address</td>
                 <td>8:30 - 9:00</td>                
-                <td><b>Tom</b><br>IEEE President Elect & Storage Veteran</td>
+                <td><b>Thomas Coughlin</b><br>IEEE President Elect & Storage Veteran</td>
               </tr>
               <tr>
 				<td>Session 1</td>
                 <td>9:00 - 9:30 </td>               
-                <td><b>Tameesh Suri</b><br>Samsung, Chief Architect, US </td>
+                <td><b>Tameesh Suri</b><br>Director - AI systems Architecture, Applied Material</td>
               </tr>
               <tr>
 				<td>Session 2</td>
                 <td>9:30 - 10:00 </td>               
-                <td><b>Siddhartha Nandi</b><br>SNIA Board Member, HiPC</td>
+                <td><b>Siddhartha Nandi</b><br>Founder AirNSoft , SNIA Board member , HiPC</td>
               </tr>
               <tr>
 				<td>Session 3</td>
@@ -813,24 +813,24 @@ In the present assignment in CEA, he is looking after the National Power Portal,
                 <td><b>Mashood Abdullah</b><br>Fabric Attached Memory Expert, HPE</td>
               </tr>
               <tr>
-				<td>Panel Discussion (Talk it out "HPC, HPDA: Computational Storage, NDP, Hurdles and Enablers!")</td>   
+				<td>Panel Discussion Talk it out "HPC, HPDA: Computational Storage, NDP, Hurdles and Enablers!"</td>   
 				<td>11:30 - 12:15</td>  
-                <td>4+1, (Names to be announced soon)</td>
+                <td>TBD</td>
               </tr>
               <tr>
 				<td>Lightening Talk - 1</td>   
 				<td>12:15 - 12:25</td>  
-                <td><b>Archit Somany</b><br>Research Scientist, Storage Space Team, Huawei Technologies India Pvt. Ltd.</td>
+                <td><b>Archit Somani</b><br>Post-Doctoral Fellow at Technion-Israel Institute of Technology.</td>
               </tr>
               <tr>
 				<td>Lightening Talk - 2</td>   
 				<td>12:25 - 12:35</td>  
-                <td><b>Shubhankar</b><br>Ph.D, IIT Delhi (Joining Huawei soon)</td>
+                <td><b>Shubhankar</b><br>Ph.D, IIT Delhi</td>
               </tr>
               <tr>
 				<td>Q & A</td>   
 				<td>12:35 - 12:45</td>  
-                <td>For LT Sessions</td>
+                <td>LT Sessions</td>
               </tr>
               <tr>
 				<td>Break</td>   
@@ -845,7 +845,7 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Session 7 - Unleashing benefits of NVMe-Of while keeping software define paradigm</td>   
 				<td>13:45 - 14:30</td>  
-                <td><b>Professor Onur Mutlu</b> <br>Chief Guest</td>
+                <td><b>Professor Onur Mutlu</b> <br> Professor of Computer Science at ETH Zurich </td>
               </tr>
               <tr>
 				<td>Session 8 - Intelligent Architectures for Intelligent Machines</td>   
@@ -855,7 +855,7 @@ In the present assignment in CEA, he is looking after the National Power Portal,
               <tr>
 				<td>Closing Notes</td>   
 				<td>15:00 - 15:15</td>  
-                <td><b>Bindhumadhava B S</b><br>Chair, IEEE Bangalore Section</td>
+                <td><b>Bindhumadhava B S</b><br>IEEE Bangalore Section</td>
               </tr>
               
               </tr>
@@ -949,8 +949,8 @@ In the present assignment in CEA, he is looking after the National Power Portal,
             <a href="#" data-toggle="modal" data-target="#archit">
             <img src="./img/Archit.jpg" alt="Badri">
             <div class="caption">
-                    <h3>Archit Somany</h3>
-                    <p>Research Scientist, Storage Space Team, Huawei Technologies India Pvt. Ltd.</p>
+                    <h3>Archit Somani</h3>
+                    <p> Post-Doctoral Fellow at Technion-Israel Institute of Technology</p>
                     <p></p>
                     <p class="flipkart"></p>
                   </div>
