--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
                 <td><b>Tameesh Suri</b><br>Director - AI systems Architecture, Applied Material</td>
               </tr>
               <tr>
-				<td>Session 2</td>
+				<td>Session 2 - High Performance Storage Systems - Trends and Challenges</td>
                 <td>9:30 - 10:00 </td>               
                 <td><b>Siddhartha Nandi</b><br>Founder AirNSoft , SNIA Board member , HiPC</td>
               </tr>
