--- a/index.html
+++ b/index.html
@@ -888,17 +888,22 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
                 <th>Speakers</th>
               </tr>
               <tr>
-				<td>Welcome and Setting the Context</td>  
-                <td>8:20 - 8:30 </td>                
+				<td>Welcome Address</td>  
+                <td>8:15 - 8:20 </td>                
                 <td><b>Bindhumadhava B S</b> <br> Chair IEEE Bangalore Section</td>
+              </tr>
+               <tr>
+				<td>Opening Remarks and context setting for the symposium</td>
+                <td>8:20 - 8:30</td>                
+                <td><b>Isaac Bi</b><br>CEO, Huawei Technology India Private Limited</td>
               </tr>
               <tr>
 				<td>Day's Keynote  Address</td>
                 <td>8:30 - 9:00</td>                
-                <td><b>Thomas Coughlin</b><br>IEEE President Elect & Storage Veteran</td>
+                <td><b>Thomas Coughlin</b><br>President of Coughlin Associates, Inc. & Past-President IEEE-USA & Storage Veteran</td>
               </tr>
               <tr>
-				<td>Session 1</td>
+				<td>Session 1 - Challenges emerging from High performance application to new generation computer architectures</td>
                 <td>9:00 - 9:30 </td>               
                 <td><b>Tameesh Suri</b><br>Director - AI systems Architecture, Applied Material</td>
               </tr>
@@ -908,7 +913,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
                 <td><b>Siddhartha Nandi</b><br>Founder AirNSoft , SNIA Board member , HiPC</td>
               </tr>
               <tr>
-				<td>Session 3</td>
+				<td>Session 3 - Next Gen Memory Architectures for Next Gen applications</td>
 				<td>10:00 - 10:30</td>  
 				<td><b>Manu Awasthi</b> <br> Associate Professor of Computer Science, Ashoka University, Ph.D. University of Utah</td>
               </tr>
@@ -928,12 +933,12 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
                 <td>TBD</td>
               </tr>
               <tr>
-				<td>Lightening Talk - 1</td>   
+				<td>Lightening Talk - 1: A Brief Introduction to Build an Efficient Blockchain</td>   
 				<td>12:15 - 12:25</td>  
                 <td><b>Archit Somani</b><br>Post-Doctoral Fellow at Technion-Israel Institute of Technology.</td>
               </tr>
               <tr>
-				<td>Lightening Talk - 2 - Leveraging different ISAs and Operating Systems for designing application-specific systems</td>   
+				<td>Lightening Talk - 2: Leveraging different ISAs and Operating Systems for designing application-specific systems</td>   
 				<td>12:25 - 12:35</td>  
                 <td><b>Shubhankar Suman Singh</b><br>Ph.D, IIT Delhi</td>
               </tr>
