Added partner logo

--- a/index.html
+++ b/index.html
@@ -1398,6 +1398,9 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
                   <img src="./img/Huawei-Logo.png" alt="huawei" />
                 </div>
                 <p>BUILDING A FULLY CONNECTED, INTELLIGENT WORLD</p>
+                <div class="hlogo">
+                  <img src="./img/IEEE-CS-Logo.png" alt="huawei" />
+                </div>
             </div>
             <div class="col-md-4">
                 <h2>Send a Message</h2>
