--- a/index.html
+++ b/index.html
@@ -1362,7 +1362,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
             <a href="#" data-toggle="modal" data-target="#">
               <img src="./img/Rashi.jpg" alt="">
               <div class="caption">
-                <h3>Rashi </h3>
+                <h3>Rashi Srivastava</h3>
                 <p>MSR</p>
                 <p class="flipkart">IEEE Bangalore Section</p>
               </div>
