--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
                 <td><b>Siddhartha Nandi</b><br>Founder AirNSoft , SNIA Board member , HiPC</td>
               </tr>
               <tr>
-				<td>Session 3 - Next Gen Memory Architectures for Next Gen applications</td>
+				<td>Session 3 - Mitigating Data Movement in Memory and Storage Systems – Opportunities and Challenges</td>
 				<td>10:00 - 10:30</td>  
 				<td><b>Manu Awasthi</b> <br> Associate Professor of Computer Science, Ashoka University, Ph.D. University of Utah</td>
               </tr>
