--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
               <tr>
 				<td>Session 1 - Challenges emerging from High performance application to new generation computer architectures</td>
                 <td>9:00 - 9:30 </td>               
-                <td>TBD</td>
+                <td><b>Arun Ramakrishnan</b><br>Contract Design Engineer at HPC Storage Division, Hewlett Packard Enterprise (HPE)</td>
               </tr>
               <tr>
 				<td>Session 2 - High Performance Storage Systems - Trends and Challenges</td>
@@ -1273,7 +1273,7 @@ Indian Institute of Information Technology, Dharwad.</span></h4>
 				<img src="./img/Jean-Francois.png" alt="Jean">
 				<div class="caption">
                 <h3>Jean-Francois Marie</h3>
-                <p>SNIA EMEA, Board of Director</p>
+                <p>Kalray Chief Solution Architect and SNIA EMEA Board of Directors</p>
                 <p></p>
                 <p class="flipkart"></p>
               </div>
